--- a/abra_primeiro.html
+++ b/abra_primeiro.html
@@ -6,17 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="trabalhofinal/styles/estilizacao.css">
   <link rel="stylesheet" href="trabalhofinal/styles/homepage.css">
-  <link rel="icon" type="image/x-icon" href="ico/pagina-inicial.ico">
+  <link rel="icon" type="image/x-icon" href="trabalhofinal/ico/pagina-inicial.ico">
   <title>Página inicial</title>
 </head>
 <body>
   <!--sidebar-->  
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="trabalhofinal/página_inicial.html">Home</a>
-    <a href="trabalhofinal/phpform1.html">Imc</a> 
-    <a href="trabalhofinal/coronazap.html">Coronazap</a>
-    <a href="trabalhofinal/   tabela.html">Tabela</a>
+    <a href="abra_primeiro.html">Home</a>
+    <a href="trabalhofinal/imc/phpform1.html">Imc</a> 
+    <a href="trabalhofinal/corona/coronazap.html">Coronazap</a>
+    <a href="trabalhofinal/tabela/tabela.html">Tabela</a>
   </div>  
   <div id="main">
     <button class="openbtn" onclick="openNav()">☰ </button>  
