--- a/trabalhofinal/imc/phpform1.html
+++ b/trabalhofinal/imc/phpform1.html
@@ -2,19 +2,19 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="estiloform.css">
-    <link rel="stylesheet" href="estilizacao.css">
-    <link rel="icon" type="image/x-icon" href="ico/bmi.ico">
+    <link rel="stylesheet" href="../styles/estiloform.css">
+    <link rel="stylesheet" href="../styles/estilizacao.css">
+    <link rel="icon" type="image/x-icon" href="../ico/bmi.ico">
     <title> Formulário</title>
 </head>
 <body>
     <!--sidebar-->
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-      <a href="página_inicial.html">Home</a>
+      <a href="../../abra_primeiro.html">Home</a>
       <a href="phpform1.html">Imc</a> 
-      <a href="coronazap.html">Coronazap</a>
-      <a href="tabela.html">Tabela</a>
+      <a href="../corona/coronazap.html">Coronazap</a>
+      <a href="../tabela/tabela.html">Tabela</a>
     </div>
     <div id="main">
       <button class="openbtn" onclick="openNav()">☰ </button>  
