--- a/trabalhofinal/corona/coronazap.html
+++ b/trabalhofinal/corona/coronazap.html
@@ -1,3 +1,4 @@
+<!--All code made by Ryan Costa-->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -34,20 +35,23 @@
     <!--page center-->
     <fieldset>
         <legend><h1>Bem vindo ao Coronazap</h1></legend>
-        <h2>Leia os tópicos abaixo e escolha qual deseja se informar sobre</p>
-            <form action="corona.php" method="post"">
-                <input type="radio" name="info" value="1">O Coronavírus &#x1F9A0 <br>
-                <input type="radio" name="info" value="2">Transmissão &#128567 <br>
-                <input type="radio" name="info" value="3">Sintomas &#x1F912 <br>
-                <input type="radio" name="info" value="4">Prevenção &#x1F9FC <br>
-                <input type="radio" name="info" value="5">Diagnóstico &#x270D <br>
-                <input type="radio" name="info" value="6">Isolamento Domiciliar &#x1F3E0 <br>
-                <input type="radio" name="info" value="7">Tratamento &#x1F691 <br>
-                <input type="radio" name="info" value="8">Ação no Brasil &#x1F1E7&#x1F1F7<br>
-                <input type="radio" name="info" value="9">Fake ou Verdade &#x2049<br>
-                <input type="radio" name="info" value="10">Profissional de saúde &#x1F48A<br>
-                <button type="submit">Enviar</button>
-            </form>
+        <h2><p>Leia os tópicos abaixo e escolha qual deseja se informar sobre</p>
+          <!--form-->  
+          <form action="corona.php" method="post"">
+            <!--info radio-->
+            <input type="radio" name="info" value="1">O Coronavírus &#x1F9A0 <br>
+            <input type="radio" name="info" value="2">Transmissão &#128567 <br>
+            <input type="radio" name="info" value="3">Sintomas &#x1F912 <br>
+            <input type="radio" name="info" value="4">Prevenção &#x1F9FC <br>
+            <input type="radio" name="info" value="5">Diagnóstico &#x270D <br>
+            <input type="radio" name="info" value="6">Isolamento Domiciliar &#x1F3E0 <br>
+            <input type="radio" name="info" value="7">Tratamento &#x1F691 <br>
+            <input type="radio" name="info" value="8">Ação no Brasil &#x1F1E7&#x1F1F7<br>
+            <input type="radio" name="info" value="9">Fake ou Verdade &#x2049<br>
+            <input type="radio" name="info" value="10">Profissional de saúde &#x1F48A<br>
+            <button type="submit">Enviar</button>
+          </form>
+        </h2>
  </fieldset> 
 </body>
 </html>
