--- a/trabalhofinal/imc/phpform1.html
+++ b/trabalhofinal/imc/phpform1.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../styles/estiloform.css">
+    <link rel="stylesheet" href="../styles/estiloform1.css">
     <link rel="stylesheet" href="../styles/estilizacao.css">
     <link rel="icon" type="image/x-icon" href="../ico/bmi.ico">
     <title> Formulário</title>
@@ -34,17 +34,19 @@
     <!--form--> 
     <form action="phpform1dados.php" method="POST">
         <fieldset>
-            <legend>Formulário</legend>
-            <label for="name">Nome:</label>
-            <input type="text"  name=name><br>
-            <label for="age">Idade:</label>
-            <input type="number" name="age"><br>
-            <label for="weight">Peso:</label>
-            <input type="text" name="weight"><br>
-            <label for="height">Altura:</label>
-            <input type="text" name="height"><br>
-            <button type="submit" name="enviar">Enviar</button>
-            <button type="reset" name="limpar">Limpar</button>
+            <legend><h1>Formulário</h1></legend>
+            <h2>
+              <label for="name">Nome:</label>
+              <input type="text"  name=name><br>
+              <label for="age">Idade:</label>
+              <input type="number" name="age"><br>
+              <label for="weight">Peso:</label>
+              <input type="text" name="weight"><br>
+              <label for="height">Altura:</label>
+              <input type="text" name="height"><br>
+              <button type="submit" name="enviar">Enviar</button>
+              <button type="reset" name="limpar">Limpar</button>
+            </h2>
         </fieldset>
     </form>
 </body>
