--- a/trabalhofinal/tabela/tabela.html
+++ b/trabalhofinal/tabela/tabela.html
@@ -1,3 +1,4 @@
+<!--All code made by Ryan Costa-->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -38,8 +39,11 @@
         <legend>
             <h1>Veja os números pares ou ímpares até menores que:</h1>
         </legend>
+        <!--form-->
         <form action="tabela.php" method="post">
+            <!--define variable $n-->
             <input type="text" placeholder="Digite um número" name="n">
+            <!--par/ímpar radio-->
             <h2>Quero ver os números:</h2>
             <label for="par">Pares</label>
             <input type="radio" name="op" value="1">
